--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -1,4 +1,4 @@
-<!-- Add To Cart Offcanvas -->contactInfoCanvas
+<!-- Add To Cart Offcanvas -->
 <div class="offcanvas offcanvas-cart offcanvas-end" tabindex="-1" id="addToCartCanvas"
     aria-labelledby="addToCartCanvasLabel">
     <div class="offcanvas-header">
@@ -169,7 +169,7 @@
             <h6>Subscribe Now</h6>
             <form action="/" method="get" class="text-center">
                 <input type="email" class="form-control" placeholder="Enter your email" required>
-                <button type="submit" class="button button-outline-main w-100 justify-content-center">
+                <button type="submit" class="button button-main w-100 justify-content-center">
                     Subscribe
                     <span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
