--- a/src/html/layouts/navbar.html
+++ b/src/html/layouts/navbar.html
@@ -12,12 +12,12 @@
                             aria-expanded="false">Home</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <span class="btn-back">
+                                <button type="button" class="btn-back">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                         <path fill="currentColor"
                                             d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
                                     </svg>
-                                </span>
+                                </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -38,12 +38,12 @@
                             data-bs-toggle="dropdown" aria-expanded="false">Courses</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <span class="btn-back">
+                                <button type="button" class="btn-back">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                         <path fill="currentColor"
                                             d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
                                     </svg>
-                                </span>
+                                </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -64,12 +64,12 @@
                             data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <span class="btn-back">
+                                <button type="button" class="btn-back">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                         <path fill="currentColor"
                                             d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
                                     </svg>
-                                </span>
+                                </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -84,13 +84,12 @@
                                     data-bs-toggle="dropdown" aria-expanded="false">Products</a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown-menu-heading">
-                                        <span class="btn-back">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24">
+                                        <button type="button" class="btn-back">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                                 <path fill="currentColor"
                                                     d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
                                             </svg>
-                                        </span>
+                                        </button>
                                         <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                             aria-label="Close">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -112,13 +111,12 @@
                                     data-bs-toggle="dropdown" aria-expanded="false">Teacher</a>
                                 <ul class="dropdown-menu">
                                     <li class="dropdown-menu-heading">
-                                        <span class="btn-back">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24">
+                                        <button type="button" class="btn-back">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                                 <path fill="currentColor"
                                                     d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
                                             </svg>
-                                        </span>
+                                        </button>
                                         <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                             aria-label="Close">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -144,12 +142,12 @@
                             data-bs-toggle="dropdown" aria-expanded="false">Blog</a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-menu-heading">
-                                <span class="btn-back">
+                                <button type="button" class="btn-back">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                         <path fill="currentColor"
                                             d="m7.825 13l4.9 4.9q.3.3.288.7t-.313.7q-.3.275-.7.288t-.7-.288l-6.6-6.6q-.15-.15-.213-.325T4.426 12t.063-.375t.212-.325l6.6-6.6q.275-.275.688-.275t.712.275q.3.3.3.713t-.3.712L7.825 11H19q.425 0 .713.288T20 12t-.288.713T19 13z" />
                                     </svg>
-                                </span>
+                                </button>
                                 <button type="button" class="btn-close-canvas" data-bs-dismiss="offcanvas"
                                     aria-label="Close">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
