--- a/src/scss/components/_offcanvas.scss
+++ b/src/scss/components/_offcanvas.scss
@@ -10,6 +10,11 @@
 .offcanvas {
     &-header {
         box-shadow: 0 0 17px rgba(0, 0, 0, 0.1);
+        @media (max-width: 992px) {
+            & {
+                box-shadow: none;
+            }
+        }
     }
 
     &-title {
