--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -123,6 +123,10 @@
 
             .dropdown-menu {
                 width: 200px;
+
+                svg {
+                    width: 20px;
+                }
             }
         }
     }
