--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -109,9 +109,11 @@
         transform: translateY(.625rem);
         transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
 
-        & { 
-            top: 0;
-            left: 100%;
+        @media (min-width: 993px) {
+            .dropdown-menu { 
+                top: 0;
+                left: 100%;
+            }
         }
 
         @media (max-width: 992px) {
