Index about, features, courses section completed

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,7 +3,7 @@ $colors: (
     "amber": #FBBF24,
     "amerald": #22C55E,
     "red": #EF4444,
-    "dark": #334155,
+    "dark": #0F172A,
     "light": #CBD5E1,
     "cyan": #22D3EE,
     "lime": #A3E635,
