حل عدد من المشكلات بالهيرو في شاشات الموبايل

--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -115,12 +115,12 @@
     </div>
 
     <div class="offcanvas-body d-flex flex-column justify-content-around">
-        <section class="socials border-bottom pb-4">
+        <section class="socials pb-4">
             <h6>Keep In Touch:</h6>
             @@include('components/socials.html')
         </section>
 
-        <section class="contact-info border-bottom pb-4">
+        <section class="contact-info pb-4">
             <h6>Contact Us:</h6>
             <div class="contact-item d-flex mb-4">
                 <div class="icon">
