--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -7,22 +7,20 @@
                     <div class="hero-text">
                         <h2>Best <span>Online</span> Platform to Learn <span id="typed-text"></span></h2>
                         <p>Upgrade your skills with top-quality online courses. Flexible learning designed for your growth. Join thousands of learners worldwide!</p>
-                        <a href="html/course-1.html" class="button button-dark button-md rounded-pill mt-3">
-                            <span class="me-1">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                    <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2" d="m14 16l4-4m0 0l-4-4m4 4H6" />
-                                </svg>
-                            </span>
-                            Find Courses
-                        </a>
-                        <button type="button" class="button button-outline-dark button-md rounded-pill ms-2 mt-3" data-bs-toggle="modal" data-bs-target="#videoModal">
-                            <span class="me-1">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                    <path fill="currentColor" d="M6 5.912c0-.155.037-.307.107-.443c.23-.44.75-.599 1.163-.354l10.29 6.088c.14.083.255.206.332.355c.23.44.08.995-.332 1.239L7.27 18.885a.8.8 0 0 1-.415.115C6.383 19 6 18.592 6 18.089z" />
-                                </svg>
-                            </span>
-                            Watch Video
-                        </button>
+                        <div class="d-lg-flex align-items-center justify-content-center justify-content-lg-start mt-3 mb-3">
+                            <a href="html/course-1.html" class="button button-dark mb-1">
+                                Find Courses
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="m14 16l4-4m0 0l-4-4m4 4H6"/></svg>
+                            </a>
+                            <button type="button" class="button button-outline-orange ms-lg-2" data-bs-toggle="modal" data-bs-target="#videoModal">
+                                Watch Video
+                                <span>
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24">
+                                        <path fill="currentColor" d="M6 5.912c0-.155.037-.307.107-.443c.23-.44.75-.599 1.163-.354l10.29 6.088c.14.083.255.206.332.355c.23.44.08.995-.332 1.239L7.27 18.885a.8.8 0 0 1-.415.115C6.383 19 6 18.592 6 18.089z" />
+                                    </svg>
+                                </span>
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
