--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -39,11 +39,11 @@
         z-index: -1;
     }
 
-    @media (max-width: 992px) {
-        & {
-            height: 100vh;
-        }
-    }
+    // @media (max-width: 992px) {
+    //     & {
+    //         height: 100vh;
+    //     }
+    // }
 }
 
 .header {
