--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -50,6 +50,7 @@
     }
 
     @media (max-width: 992px) {
+        text-align: center;
         h2 {
             font-size: 24px;
             font-weight: 500;
@@ -60,7 +61,8 @@
             font-size: 13px;
             margin: 14px 0;
             line-height: 24px;
-            opacity: 0.65;
+            color: rgb(0 0 0 / 60%);
+            width: 100%;
         }
     }
 }
@@ -74,6 +76,7 @@
         height: clamp(330px, 50vw, 550px);
         right: 10%;
         top: 10px;
+        position: relative;
     }
 
     &::before {
@@ -133,9 +136,9 @@
 
     @media (max-width: 992px) {
         &.dots {
-            top: 50%;
+            top: 25%;
             right: 30px;
-            z-index: 1;
+            z-index: -1;
         }
 
         &.book,
@@ -144,8 +147,8 @@
         }
 
         &.red-plus {
-            top: 60%;
-            left: 4%;
+            top: 65%;
+            left: 5%;
             z-index: 1;
         }
 
