البدأ في تنسيق قسم الـ about

--- a/src/scss/layouts/_hero.scss
+++ b/src/scss/layouts/_hero.scss
@@ -43,9 +43,9 @@
     }
 
     p {
-        margin: 24px 0;
+        margin: 16px 0 42px;
         width: 75%;
-        color: #555555;
+        color: #555;
         line-height: 1.75;
     }
 
