تصحيح بعض التنسيقات والانتهاء من تنسيق الاقسام الثلاثة الاولي

--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -115,12 +115,12 @@
     </div>
 
     <div class="offcanvas-body d-flex flex-column justify-content-around">
-        <section class="socials pb-4">
+        <div class="socials pb-4">
             <h6>Keep In Touch:</h6>
             @@include('components/socials.html')
-        </section>
+        </div>
 
-        <section class="contact-info pb-4">
+        <div class="contact-info pb-4">
             <h6>Contact Us:</h6>
             <div class="contact-item d-flex mb-4">
                 <div class="icon">
@@ -163,9 +163,9 @@
                     <p class="fw-semibold">23 Naser City, Cairo, Egypt</p>
                 </div>
             </div>
-        </section>
+        </div>
 
-        <section class="subscribe">
+        <div class="subscribe">
             <h6>Subscribe Now</h6>
             <form action="/" method="get" class="text-center">
                 <input type="email" class="form-control" placeholder="Enter your email" required>
@@ -179,6 +179,6 @@
                     </span>
                 </button>
             </form>
-        </section>
+        </div>
     </div>
 </div>
