--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -3,7 +3,7 @@
 
 .button {
     font-weight: 500;
-    padding: 12px 24px;
+    padding: 8px 18px;
     align-items: center;
     display: inline-flex;
     text-transform: uppercase;
@@ -14,23 +14,16 @@
     letter-spacing: 0.75px;
 }
 
-.button-video {
-    display: inline-flex;
-    align-items: center;
 
-    span {
-        background: var(--main-color);
-        width: 48px;
-        height: 48px;
-        border-radius: 100%;
-        display: inline-grid;
-        place-content: center;
-
-        svg {
-            color: white;
-        }
-    }
+.button-sm {
+    padding: 4px 12px;
+    font-size: 13px;
 }
+
+.button-lg {
+    padding: 12px 24px;
+}
+
 
 @mixin button-style($color) {
     color: white;
