--- a/src/scss/components/_offcanvas.scss
+++ b/src/scss/components/_offcanvas.scss
@@ -172,6 +172,11 @@
         margin-bottom: 16px;
     }
 
+    .offcanvas-body > div {
+        margin-bottom: 24px;
+        border-bottom: 1px dashed rgb(0 0 0 / 25%);
+    }
+
     .socials svg {
         color: var(--dark-color);
     }
