--- a/src/scss/sections/_courses-category.scss
+++ b/src/scss/sections/_courses-category.scss
@@ -1,10 +1,10 @@
 // At: Index
 .section.courses-category {
     .category-item {
-        background-color: white;
+        background-color: #fff;
         border-radius: var(--border-radius-size);
         padding: 24px;
-        margin-bottom: 16px;
+        margin: 12px 0;
         display: flex;
         align-items: center;
 
@@ -19,5 +19,5 @@
         }
     }
 
-    
+
 }
