--- a/src/scss/sections/_features.scss
+++ b/src/scss/sections/_features.scss
@@ -5,6 +5,10 @@
     .feature-item {
         display: flex;
 
+        @media (max-width: 992px) {
+            margin-bottom: 24px;
+        }
+
         .icon {
             flex-shrink: 0;
             margin-right: 24px;
@@ -13,24 +17,27 @@
             height: var(--size);
             display: inline-grid;
             place-content: center;
-            background-color: rgba(255,255,255, .1);
+            background-color: rgba(255, 255, 255, .1);
             border-radius: 100%;
 
             svg {
                 color: var(--main-color);
+                width: 32px;
+                height: 32px;
             }
         }
 
         h6 {
             font-size: 17px;
             text-transform: capitalize;
-            margin-bottom: 10px;
+            margin-bottom: 8px;
         }
 
         p {
-            line-height: 24px;
-            font-size: 14px;
-            color: rgb(255 255 255 / 60%);
+            line-height: 20px;
+            font-size: 13px;
+            color: rgba(255, 255, 255, .6);
+            font-weight: 200;
         }
     }
 }
