--- a/src/scss/sections/_courses-category.scss
+++ b/src/scss/sections/_courses-category.scss
@@ -7,6 +7,11 @@
         margin: 12px 0;
         display: flex;
         align-items: center;
+        border: 1px solid transparent;
+
+        &:hover {
+            border-color: rgba(var(--main-rgb-color), 35%);
+        }
 
         .icon {
             --size: 48px;
