العمل علي تنسيق قسم الكورسات

--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -8,7 +8,7 @@
                         <h2>Best <span>Online</span> Platform to Learn <span id="typed-text"></span></h2>
                         <p>Upgrade your skills with top-quality online courses. Flexible learning designed for your growth. Join thousands of learners worldwide!</p>
                         <div class="d-lg-flex align-items-center justify-content-center justify-content-lg-start mt-3 mb-3">
-                            <a href="html/course-1.html" class="button button-lg button-dark mb-1">
+                            <a href="html/course-1.html" class="button button-lg button-dark mb-1 mb-lg-0">
                                 Find Courses
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ms-2" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="1.5" d="m14 16l4-4m0 0l-4-4m4 4H6"/></svg>
                             </a>
