--- a/src/scss/sections/_courses.scss
+++ b/src/scss/sections/_courses.scss
@@ -3,24 +3,77 @@
     border-radius: var(--border-radius-size);
     overflow: hidden;
     margin-bottom: 32px;
-}
-
-.course-card-item .image {
     position: relative;
-}
 
-.course-card-item .image img {
-    width: 100%;
-    height: 230px;
-    object-fit: cover;
-}
+    .image {
+        position: relative;
 
-.course-card-item .image .meta-category {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: var(--lime-color);
-    color: white;
-    padding: 6px;
-    font-size: 12px;
+        img {
+            width: 100%;
+            height: 230px;
+            object-fit: cover;
+        }
+    }
+
+    .detail {
+        padding: 16px;
+        background-color: white;
+        z-index: 1;
+        width: 90%;
+        margin: -48px auto 21px;
+        font-size: 13px;
+
+        svg {
+            width: 15px;
+        }
+
+        h6 {
+            font-size: 17px;
+            font-weight: 600;
+            line-height: 26px;
+            margin: 4px 0;
+        }
+
+        .meta {
+            display: flex;
+            justify-content: space-between;
+            font-size: 12px;
+
+            span {
+                display: flex;
+                align-items: center;
+
+                svg {
+                    margin-right: 7px;
+                }
+            }
+        }
+
+        .rates {
+            display: flex;
+            align-items: center;
+            font-weight: 600;
+
+            span {
+                font-size: 11px;
+                font-weight: 400;
+                margin-left: 4px;
+            }
+
+            svg {
+                margin-right: 3px;
+                color: var(--main-color);
+            }
+        }
+    }
+
+    .price {
+        top: 12px;
+        left: 12px;
+        padding: 8px;
+        color: #000;
+        font-weight: 600;
+        position: absolute;
+        background-color: var(--lime-color);
+    }
 }
