--- a/src/scss/sections/_features.scss
+++ b/src/scss/sections/_features.scss
@@ -19,13 +19,23 @@
             place-content: center;
             background-color: rgba(255, 255, 255, .1);
             border-radius: 100%;
+            color: var(--main-color);
+            // transition: 0.15s ease-in-out;
 
             svg {
-                color: var(--main-color);
+                color: inherit;
                 width: 32px;
                 height: 32px;
             }
+
         }
+
+        &:hover .icon {
+            background-color: transparent;
+            border: 1px solid var(--main-color);
+            color: white;
+        }
+
 
         h6 {
             font-size: 17px;
