--- a/src/scss/sections/_courses.scss
+++ b/src/scss/sections/_courses.scss
@@ -32,6 +32,10 @@
             font-weight: 600;
             line-height: 26px;
             margin: 4px 0;
+            transition: color 0.3s ease-in-out;
+            &:hover {
+                color: var(--main-color);
+            }
         }
 
         .meta {
