--- a/src/scss/sections/_about.scss
+++ b/src/scss/sections/_about.scss
@@ -3,16 +3,16 @@
     padding-top: clamp(32px, 2vw, 160px);
     position: relative;
 
-    &::before {
-        content: '';
-        position: absolute;
-        width: 20%;
-        background: rgba(var(--main-rgb-color), 0.15 );
-        border-radius: 50%;
-        filter: blur(104px);
-        height: 100%;
-        bottom: -50px;
-    }
+    // &::before {
+    //     content: '';
+    //     position: absolute;
+    //     width: 20%;
+    //     background: rgba(var(--main-rgb-color), 0.25 );
+    //     border-radius: 50%;
+    //     filter: blur(104px);
+    //     height: 100%;
+    //     bottom: -50px;
+    // }
 
     .section-image {
         position: relative;
