--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,3 +28,5 @@
 @use './sections/features';
 @use './sections/courses';
 @use './sections/choose-us';
+@use './sections/statistics';
+@use './sections/brands';
