--- a/src/html/layouts/hero.html
+++ b/src/html/layouts/hero.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-image">
-                        <img src="@@BASE_URL/assets/images/hero-img.png" data-speed="8" class="abs" alt="Hero image preview">
+                        <img src="@@BASE_URL/assets/images/hero-img.png" data-speed="8" class="abs parallax-effect" alt="Hero image preview">
                     </div>
                 </div>
             </div>
