--- a/src/scss/sections/_choose-us.scss
+++ b/src/scss/sections/_choose-us.scss
@@ -1,3 +1,20 @@
+section.choose-us {
+    background-color: #F1F5F9;
+    position: relative;
+
+    // &::before {
+    //     top: 0;
+    //     right: 25%;
+    //     content: "";
+    //     width: 500px;
+    //     height: 500px;
+    //     position: absolute;
+    //     filter: blur(100px);
+    //     border-radius: 200%;
+    //     background: rgba(var(--main-rgb-color), 0.15 );
+    // }
+}
+
 .choose-feature-item {
     display: flex;
     align-items: start;
@@ -20,15 +37,21 @@
     margin-top: 8px;
 }
 
-
 .float-box-counter {
-    left: 0;
-    width: 350px;
+    right: 60%;
+    bottom: 20%;
+    width: 300px;
+    padding: 24px;
     display: flex;
-    padding: 16px;
-    color: white;
+    border-radius: 4px;
     position: absolute;
     align-items: center;
-    border-radius: 12px;
-    background-color: black;
+    background-color: #fff;
+
+    .text h6 {
+        font: {
+            size: 18px;
+            weight: 700;
+        }
+    }
 }
