--- a/src/scss/sections/_choose-us.scss
+++ b/src/scss/sections/_choose-us.scss
@@ -2,17 +2,17 @@ section.choose-us {
     background-color: #F1F5F9;
     position: relative;
 
-    // &::before {
-    //     top: 0;
-    //     right: 25%;
-    //     content: "";
-    //     width: 500px;
-    //     height: 500px;
-    //     position: absolute;
-    //     filter: blur(100px);
-    //     border-radius: 200%;
-    //     background: rgba(var(--main-rgb-color), 0.15 );
-    // }
+    .section-image img:nth-child(3) {
+        position: absolute;
+        top: 25%;
+        right: 0;
+    }
+    .section-image img:nth-child(4) {
+        position: absolute;
+        width: 70px;
+        top: 7%;
+        left: 5%;
+    }
 }
 
 .choose-feature-item {
@@ -38,20 +38,21 @@ section.choose-us {
 }
 
 .float-box-counter {
-    right: 60%;
-    bottom: 20%;
-    width: 300px;
+    right: 70%;
+    bottom: 10%;
+    width: -moz-max-content;
+    width: max-content;
     padding: 24px;
-    display: flex;
-    border-radius: 4px;
+    border-radius: 4px; 
     position: absolute;
-    align-items: center;
     background-color: #fff;
+    box-shadow: 0 0 32px rgb(0 0 0 / .08);
 
     .text h6 {
         font: {
-            size: 18px;
+            size: 24px;
             weight: 700;
+            letter-spacing: .8px;
         }
     }
 }
