Improve project process

--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <!-- Left -->
                 <div class="col col-lg-2 d-flex align-self-center">
-                    @@include('components/logo.html')
+                    @@include('html/components/logo.html')
                 </div>
 
                 <!-- Middle -->
@@ -137,7 +137,7 @@
                 <!-- Right -->
                 <div class="col col-lg-4 align-self-center justify-content-end justify-content-lg-start d-flex">
                     <div class="social-links">
-                        @@include('components/socials.html')
+                        @@include('html/components/socials.html')
                     </div>
 
                     <button type="button" class="button shopping-cart d-lg-none" data-bs-toggle="offcanvas"
