--- a/src/html/layouts/navbar.html
+++ b/src/html/layouts/navbar.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="offcanvas offcanvas-start" tabindex="-1" id="navbarMainMenu" aria-labelledby="navbarMainMenuLabel">
             <div class="offcanvas-header">
-                @@include('components/logo.html')
+                @@include('html/components/logo.html')
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
