--- a/src/html/components/offcanvas.html
+++ b/src/html/components/offcanvas.html
@@ -20,7 +20,7 @@
         <div class="cart-items">
             <div class="cart-item">
                 <div class="item-image">
-                    <img src="@@BASE_URL/assets/images/products/product-1.jpg" alt="Product Image">
+                    <img src="assets/images/products/product-1.jpg" alt="Product Image">
                 </div>
                 <div class="item-cyan">
                     <h6 class="title">Ultimate Digital Marketing Bootcamp</h6>
@@ -42,7 +42,7 @@
             </div>
             <div class="cart-item">
                 <div class="item-image">
-                    <img src="@@BASE_URL/assets/images/products/product-2.jpg" alt="Product Image">
+                    <img src="assets/images/products/product-2.jpg" alt="Product Image">
                 </div>
                 <div class="item-cyan">
                     <h6 class="title">AI & Machine Learning Fundamentals</h6>
@@ -64,7 +64,7 @@
             </div>
             <div class="cart-item">
                 <div class="item-image">
-                    <img src="@@BASE_URL/assets/images/products/product-3.jpg" alt="Product Image">
+                    <img src="assets/images/products/product-3.jpg" alt="Product Image">
                 </div>
                 <div class="item-cyan">
                     <h6 class="title">Mastering Web Development</h6>
@@ -109,7 +109,7 @@
     aria-labelledby="contactInfoCanvasLabel">
     <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="contactInfoCanvasLabel">
-            @@include('components/logo.html')
+            @@include('html/components/logo.html')
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
@@ -117,7 +117,7 @@
     <div class="offcanvas-body d-flex flex-column justify-content-around">
         <div class="socials pb-4">
             <h6>Keep In Touch:</h6>
-            @@include('components/socials.html')
+            @@include('html/components/socials.html')
         </div>
 
         <div class="contact-info pb-4">
