--- a/src/html/includes/scripts.html
+++ b/src/html/includes/scripts.html
@@ -1,7 +1,7 @@
 <!-- Javascript Files, Plugins & Libraries -->
-<script src="@@BASE_URL/assets/libs/jquery/jquery-3.7.1.min.js"></script>
-<script src="@@BASE_URL/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/libs/jquery/jquery-3.7.1.min.js"></script>
+<script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>    
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/odometer.js/0.4.8/odometer.min.js"></script>
-<script src="@@BASE_URL/assets/js/main.js"></script>
+<script src="assets/libs/swiper/swiper-bundle.min.js"></script>
+<script src="assets/libs/odometer/odometer.min.js"></script>
+<script src="assets/js/main.js"></script>
