--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -12,28 +12,14 @@
                     <div class="search">
                         <div class="search-category dropdown">
                             <button type="button" class="button" data-bs-toggle="dropdown">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
-                                    <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                        stroke-width="2">
-                                        <circle cx="17" cy="7" r="3" />
-                                        <circle cx="7" cy="17" r="3" />
-                                        <path
-                                            d="M14 14h6v5a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1zM4 4h6v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1z" />
-                                    </g>
-                                </svg>
-
-                                Categories
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="ms-1"
-                                    viewBox="0 0 16 16">
-                                    <path fill="currentColor" fill-rule="evenodd"
-                                        d="m8 10.207l3.854-3.853l-.707-.708L8 8.793L4.854 5.646l-.708.708z"
-                                        clip-rule="evenodd" />
-                                </svg>
+                                <i class="bx bx-category"></i>
+                                <span class="mx-2">Categories</span>
+                                <i class="bx bx-chevron-down"></i>
                             </button>
 
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="#" class="dropdown-item primary">
+                                    <a href="#" class="dropdown-item blue">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 24 24">
                                             <g fill="currentColor">
@@ -124,11 +110,7 @@
                                 placeholder="Search your course">
                             <button type="button" class="button button-main">
                                 Search
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                                    class="ms-2">
-                                    <path fill="currentColor"
-                                        d="M21.71 20.29L18 16.61A9 9 0 1 0 16.61 18l3.68 3.68a1 1 0 0 0 1.42 0a1 1 0 0 0 0-1.39M11 18a7 7 0 1 1 7-7a7 7 0 0 1-7 7" />
-                                </svg>
+                                <i class="bx bx-search ms-1"></i>
                             </button>
                         </form>
                     </div>
@@ -171,16 +153,12 @@
 
                     <a href="html/register.html" class="button button-dark d-none d-lg-flex ms-auto me-2" role="button">
                         Register
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="ms-2" viewBox="0 0 24 24">
-                            <path fill="currentColor" d="M15 4a4 4 0 0 0-4 4a4 4 0 0 0 4 4a4 4 0 0 0 4-4a4 4 0 0 0-4-4m0 1.9a2.1 2.1 0 1 1 0 4.2A2.1 2.1 0 0 1 12.9 8A2.1 2.1 0 0 1 15 5.9M4 7v3H1v2h3v3h2v-3h3v-2H6V7zm11 6c-2.67 0-8 1.33-8 4v3h16v-3c0-2.67-5.33-4-8-4m0 1.9c2.97 0 6.1 1.46 6.1 2.1v1.1H8.9V17c0-.64 3.1-2.1 6.1-2.1" />
-                        </svg>
+                        <i class="bx bx-user-plus ms-1"></i>
                     </a>
 
                     <a href="html/login.html" class="button button-outline-dark d-none d-lg-flex" role="button">
                         Login
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" class="ms-2" viewBox="0 0 24 24">
-                            <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M8 10H6a2 2 0 0 0-2 2v7a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-7a2 2 0 0 0-2-2h-2m-8 0V7a4 4 0 0 1 4-4v0a4 4 0 0 1 4 4v3m-8 0h8m-4 4v3" />
-                        </svg>
+                        <i class="bx bx-log-in ms-1"></i>
                     </a>
                 </div>
             </div>
