--- a/src/html/includes/head.html
+++ b/src/html/includes/head.html
@@ -1,3 +1,6 @@
+<!-- Page Title -->
+<title>Velora - @@pagetitle</title>
+
 <!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
