Refactored main.js and integrated Lenis and WOW.js

--- a/src/html/includes/head.html
+++ b/src/html/includes/head.html
@@ -9,6 +9,7 @@
 
 <!-- Css Files & Libraries -->
 <link rel="stylesheet" href="assets/libs/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="assets/libs/wow/animate.min.css">
 <link rel="stylesheet" href="assets/libs/swiper/swiper-bundle.min.css">
 <link rel="stylesheet" href="assets/libs/odometer/odometer-theme-default.min.css">
 <link rel="stylesheet" href="assets/libs/boxicons/css/boxicons.min.css">
