--- a/src/html/includes/scripts.html
+++ b/src/html/includes/scripts.html
@@ -1,7 +1,9 @@
 <!-- Javascript Files, Plugins & Libraries -->
 <script src="assets/libs/jquery/jquery-3.7.1.min.js"></script>
 <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>    
+<script src="assets/libs/wow/wow.min.js"></script>
+<script src="assets/libs/typed/typed.js@2.0.12"></script> 
+<script src="assets/libs/lenis/lenis.min.js"></script>   
 <script src="assets/libs/swiper/swiper-bundle.min.js"></script>
 <script src="assets/libs/odometer/odometer.min.js"></script>
 <script src="assets/js/main.js"></script>
