--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -18,6 +18,12 @@
     --border-color: #CBD5E1;
 }
 
+html,
+body {
+    scroll-behavior: auto !important;
+    height: auto;
+}
+
 body {
     font: {
         size: 13px;
@@ -98,4 +104,17 @@ button {
     &-image {
         position: relative;
     }
+}
+
+body::-webkit-scrollbar {
+    width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: rgba(var(--main-rgb-color), 0.5);
+    border-radius: 4px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: var(--main-color);
 }
