Testimonial init complete

--- a/src/html/layouts/navbar.html
+++ b/src/html/layouts/navbar.html
@@ -170,7 +170,7 @@
 
                     <li class="nav-item ms-auto">
                         <a href="tel:+201080720455" class="phone d-none d-lg-flex align-items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="text-main-color me-2"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="text-main me-2"
                                 viewBox="0 0 24 24">
                                 <g fill="none" fill-rule="evenodd">
                                     <path
@@ -185,7 +185,7 @@
 
                     <li class="nav-item ms-3">
                         <a href="mailto:ahmed.elsewailky@gmail.com" class="mail d-none d-lg-flex align-items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="text-main-color me-2"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" class="text-main me-2"
                                 viewBox="0 0 24 24">
                                 <g fill="none" stroke="currentcolor" stroke-width="2">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="m7 9l5 3.5L17 9" />
