--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,5 +28,6 @@
 @use './sections/features';
 @use './sections/courses';
 @use './sections/choose-us';
-@use './sections/statistics';
 @use './sections/brands';
+@use './sections/statistics';
+@use './sections/testimonials';
