--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -90,6 +90,7 @@ button {
 
         @media (max-width: 992px) {
             margin-bottom: 24px;
+            font-size: 28px;
         }
     }
 
