--- a/src/scss/components/_offcanvas.scss
+++ b/src/scss/components/_offcanvas.scss
@@ -109,7 +109,7 @@
         }
 
         .quantity-input {
-            border: 1px solid #e5e7eb;
+            border: 1px solid #CBD5E1;
             border-radius: 50px;
             display: flex;
             margin-left: auto;
@@ -131,6 +131,10 @@
 
             button {
                 width: 32px;
+            }
+
+            @media (max-width: 992px) {
+                display: inline-flex;
             }
         }
 
